# few-shot-clustering

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
clustering/: active_clustering.py  dataloaders.py  datasets.py  experiment_utils.py  pairwise_constraint_k_means.py  utils.py  wrappers.py
clustering/data/20_newsgroups/: README.md
clustering/visualize_results/: plot_feedback_curve.py
few_shot_clustering/: active_clustering.py  dataloaders.py  eval_utils.py  wrappers.py
few_shot_clustering/cmvc/: .gitattributes  CMVC_main_NYT.py  CMVC_main_opiec.py  CMVC_main_reverb45k.py  Context_view.py  Multi_view_CH_kmeans.py  README.md  clustering.py  cmvc_utils.py  dataloader_max_margin.py  embeddings_multi_view.py  find_k_method_test_OKB.py  find_k_method_test_real_dataset.py  find_k_methods.py  helper.py  metrics.py  model_max_margin.py  preprocessing.py  requirements.txt  test_performance.py  train_embedding_model.py
few_shot_clustering/cmvc/file/OPIEC59k_test/: EL_seed  amie_rp_seed  ent_old_id2new_id  entity_score_EL_dict  look_up_relation_EL_dict  new_seed_sim  new_seed_trpIds  rel_old_id2new_id  relation_score_EL_dict  self.clean_ent_list  self.ent2id  self.ent2triple_id_list  self.ent_freq  self.ent_id2sentence_list  self.ent_list  self.id2ent  self.id2obj  self.id2rel  self.id2sub  self.isSub  self.obj2id  self.rel2id  self.rel2triple_id_list  self.rel_freq  self.rel_list  self.sub2id  self.sub_list  (+1 more)
few_shot_clustering/short-text-clustering-enhancement/: Readme.txt  combine_predtruetext.py  compute_util.py  generate_TrainTestTxtsTfIdf.py  generate_TrainTestTxtsTfIdf_varoutlier.py  generate_TrainTestVectorsTfIdf.py  generate_initial_labels.py  groupTxt_ByClass.py  improvedclassificationembedding.py  itr_clustering_multipass_external_arg_classification_stable.py  main.py  outlier_detection_sd.py  read_clust_label.py  sent_vecgenerator.py  stopWords.txt  txt_process_util.py  word_vec_extractor.py
few_shot_clustering/short-text-clustering-enhancement/data/: S  T  TS  agnewsdataraw-8000  tweet-original-order.txt
(+185 files in other folders)
