[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "few_shot_clustering"
authors = [
    {name = "Vijay Viswanathan", email = "vijayv@andrew.cmu.edu"},
]
version = "0.0.3"
description = "A library for efficient semi-supervised clustering with large language models."
readme = "README.md"
repository = "https://github.com/viswavi/few-shot-clustering"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3.7",
]
dependencies = [
    "scikit-learn",
    "scipy",
    "numpy",
    "openai",
    "sentence_transformers",
    "jsonlines",
    "ortools",
    "tqdm",
    "datasets",
    "InstructorEmbedding",
    "gensim",
    "metric_learn",
    "tensorboardX",
    "nlpaug"
]

[tool.hatch.build]
include = [
    "*.py",
]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["few_shot_clustering"]

[tool.setuptools.packages.find]
where = ["few_shot_clustering/active_semi_supervised_clustering", "few_shot_clustering/cmvc"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
version = "0.0.3"
